question type ensured, multiple true valid, etc..